Fix layout on mobile

--- a/src/app/common/product-carousel/product-carousel.component.scss
+++ b/src/app/common/product-carousel/product-carousel.component.scss
@@ -1,10 +1,13 @@
 .col-offset-half {
-    margin-left:4.166666667%
+    margin-left: auto !important;
+    margin-right: auto !important;
+} 
+
+@media screen and (max-width: 768px) {
+    .mobilestretch{
+        display: block!important;
+        margin-bottom: 20px !important;
+      } 
 }
 
-@media screen and (min-width: 768px) {
-    .col-offset-half {
-        margin-left: auto !important;
-        margin-right: auto !important;
-    }    
-}
+
